@@ -1,10 +1,12 @@
-// 文件：com/travel/factory/JourneyFactory.java
+// src/main/java/com/travel/factory/JourneyFactory.java
 package com.travel.factory;
 
 import com.travel.model.hub.Airport;
-import com.travel.model.journey.*;
-import com.travel.model.vehicle.Vehicle;
 import com.travel.model.hub.Hub;
+import com.travel.model.journey.CruiseJourney;
+import com.travel.model.journey.FlightJourney;
+import com.travel.model.journey.TrainJourney;
+import com.travel.model.vehicle.Vehicle;
 
 import java.time.LocalDateTime;
 import java.util.Arrays;
@@ -19,7 +21,7 @@ public class JourneyFactory {
     public static JourneyFactory getInstance() {
         return INSTANCE;
     }
-    
+
     public FlightJourney createFlightJourney(String id,
                                              LocalDateTime departure,
                                              LocalDateTime arrival,
@@ -28,29 +30,25 @@ public class JourneyFactory {
                                              Airport arrivalAirport) {
         return new FlightJourney(id, departure, arrival, vehicle, departureAirport, arrivalAirport);
     }
-    
 
-//    public CruiseJourney createCruiseJourney(String id,
-//                                                 List<Journey> subJourneys,
-//                                                 Vehicle vehicle) {
-//        return new CruiseJourney(id, subJourneys, vehicle);
-//    }
-//
-//    public CruiseJourney createCruiseJourney(String id,
-//                                                 Vehicle vehicle,
-//                                                 Journey... subJourneys) {
-//        return new CruiseJourney(id, Arrays.asList(subJourneys), vehicle);
-//    }
-//
-//    public TrainJourney createTrainJourney(String id,
-//                                             List<Journey> subJourneys,
-//                                             Vehicle vehicle) {
-//        return new TrainJourney(id, subJourneys, vehicle);
-//    }
-//
-//    public TrainJourney createTrainJourney(String id,
-//                                             Vehicle vehicle,
-//                                             Journey... subJourneys) {
-//        return new TrainJourney(id, Arrays.asList(subJourneys), vehicle);
-//    }
+    public TrainJourney createTrainJourney(String id,
+                                           LocalDateTime departure,
+                                           LocalDateTime arrival,
+                                           Vehicle vehicle,
+                                           Hub departureStation,
+                                           Hub arrivalStation) {
+        return new TrainJourney(id, departure, arrival, vehicle,
+                List.of(departureStation, arrivalStation));
+    }
+
+    public CruiseJourney createCruiseJourney(String id,
+                                             LocalDateTime departure,
+                                             LocalDateTime arrival,
+                                             Vehicle vehicle,
+                                             Hub departurePort,
+                                             Hub arrivalPort) {
+        return new CruiseJourney(id, departure, arrival, vehicle,
+                List.of(departurePort, arrivalPort));
+    }
+
 }
